--- a/app/app.html
+++ b/app/app.html
@@ -138,6 +138,33 @@
 											<!--end::Svg Icon-->
 										</span>
 									</div>
+									<div class="alert-text" id="infos">
+										Your Anonymous Link is
+										 <a href="btn btn-outline- btn-sm" href="https://sorosokeanony.netlify.app/#username">
+											https://sorosokeanony.netlify.app/#username
+										</a>
+
+										<a class="btn btn-outline-secondary"
+										 href="https://api.whatsapp.com/send?text=Write%20a%20*secret%20anonymous%20message*%20for%20me..%20%F0%9F%98%89%20I%20*won%27t%20know*%20who%20wrote%20it..%20%F0%9F%98%82%E2%9D%A4%20%F0%9F%91%89%20
+										 https://sorosokeanony.netlify.app/#username">
+											Share on whatsapp
+										</a>
+									</div>
+								</div>
+								<div class="alert alert-custom alert-white alert-shadow fade show gutter-b" role="alert">
+									<div class="alert-icon">
+										<span class="svg-icon svg-icon-primary svg-icon-xl">
+											<!--begin::Svg Icon | path:assets/media/svg/icons/Tools/Compass.svg-->
+											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+													<rect x="0" y="0" width="24" height="24" />
+													<path d="M7.07744993,12.3040451 C7.72444571,13.0716094 8.54044565,13.6920474 9.46808594,14.1079953 L5,23 L4.5,18 L7.07744993,12.3040451 Z M14.5865511,14.2597864 C15.5319561,13.9019016 16.375416,13.3366121 17.0614026,12.6194459 L19.5,18 L19,23 L14.5865511,14.2597864 Z M12,3.55271368e-14 C12.8284271,3.53749572e-14 13.5,0.671572875 13.5,1.5 L13.5,4 L10.5,4 L10.5,1.5 C10.5,0.671572875 11.1715729,3.56793164e-14 12,3.55271368e-14 Z" fill="#000000" opacity="0.3" />
+													<path d="M12,10 C13.1045695,10 14,9.1045695 14,8 C14,6.8954305 13.1045695,6 12,6 C10.8954305,6 10,6.8954305 10,8 C10,9.1045695 10.8954305,10 12,10 Z M12,13 C9.23857625,13 7,10.7614237 7,8 C7,5.23857625 9.23857625,3 12,3 C14.7614237,3 17,5.23857625 17,8 C17,10.7614237 14.7614237,13 12,13 Z" fill="#000000" fill-rule="nonzero" />
+												</g>
+											</svg>
+											<!--end::Svg Icon-->
+										</span>
+									</div>
 									<div class="alert-text">
 										Anonymous messages dropped for you on sorosoke!. 
 										They're ordered with the latest showing first.
@@ -223,7 +250,7 @@
 											<!--end::Svg Icon-->
 										</span>
 									</span>
-									<span class="navi-text text-muted text-hover-primary" id="useremail">jm@softplus.com</span>
+									
 								</span>
 							</a>
 							<a href="#" class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 logout">Sign Out</a>
@@ -318,6 +345,24 @@
 				get('usernamedot').innerHTML=username;
 				var r = username.split("")[0];
 				get('firstletter').innerHTML=r.toUpperCase();
+				get('infos').innerHTML=`
+				Your Anonymous Link is
+										 <a class="btn btn-outline-success btn-sm" id="linkhref" onclick="copyToClipboard('#linkhref')">
+											https://sorosokeanony.netlify.app/app/#${username}
+										</a>
+
+										<a class="btn btn-outline-secondary"
+										 href="https://api.whatsapp.com/send?text=Write%20a%20*secret%20anonymous%20message*%20for%20me..%20%F0%9F%98%89%20I%20*won%27t%20know*%20who%20wrote%20it..%20%F0%9F%98%82%E2%9D%A4%20%F0%9F%91%89%20
+										 https://sorosokeanony.netlify.app/app/#${username}">
+											Share on whatsapp
+				</a>`;
+			}
+			function copyToClipboard(element) {
+					var $temp = $("<input>");
+					$("body").append($temp);
+					$temp.val($(element).text()).select();
+					document.execCommand("copy");
+					alert("Link Copied To Clipboard!");
 			}
 			function message(messages){
 				var count = 0;
