--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="icon" type="image/x-icon" href="app/assets/img/favicon.ico"/>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&amp;display=swap" rel="stylesheet">
 <link rel="stylesheet" href="a.css"/>
-<title>Promisine</title>
+<title>SOROSOKE</title>
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
 <div class="lines-wrap">
@@ -32,34 +32,17 @@
 <div class="container">
 <div class="site-navigation">
 <a href="index.html" class="logo m-0 float-left">
-    <img src="app/assets/img/favicon.png" width="35" height="35"/> Promisine
+    <img src="app/assets/media/logos/logo-letter-9.png" width="35" height="35"/> SOROSOKE
     <span class="text-primary">.</span>
 </a>
 <ul class="js-clone-nav d-none d-lg-inline-block site-menu float-left">
-<li class="active"><a href="#home-section" class="nav-link">Home</a></li>
-<li class="has-children">
-<a href="#" class="nav-link">Dropdown</a>
-<ul class="dropdown">
-<li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-<li class="has-children">
-<a href="#">Menu Two</a>
-<ul class="dropdown">
-<li><a href="#" class="nav-link">Sub Menu One</a></li>
-<li><a href="#" class="nav-link">Sub Menu Two</a></li>
-<li><a href="#" class="nav-link">Sub Menu Three</a></li>
-</ul>
-</li>
-<li><a href="#" class="nav-link">Menu Three</a></li>
-</ul>
-</li>
-<li><a href="#features-section" class="nav-link">Features</a></li>
-<li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-<li><a href="#about-section" class="nav-link">About</a></li>
-<li><a href="#contact-section" class="nav-link">Contact</a></li>
+<li class="active"><a href="index" class="nav-link">Home</a></li>
+
+
 </ul>
 <ul class="js-clone-nav d-none mt-1 d-lg-inline-block site-menu float-right">
-<li class="cta-button-outline"><a href="#">Sign in</a></li>
-<li class="cta-primary"><a href="#">Register</a></li>
+<li class="cta-button-outline"><a href="app/login">Sign in</a></li>
+<li class="cta-primary"><a href="app/login">Register</a></li>
 </ul>
 <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block dark d-lg-none" data-toggle="collapse" data-target="#main-navbar">
 <span></span>
