--- a/app/send.html
+++ b/app/send.html
@@ -4,7 +4,7 @@
 	<!--begin::Head-->
 	<head>
 		<meta charset="utf-8" />
-		<title>Write an anonymous message for </title>
+		<title>Write an anonymous message for me</title>
 		<meta name="description" content="Stacked card examples" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<script>
