--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Write an anonymous message for me</title>
-		<meta name="description" content="Stacked card examples" />
+		<meta name="description" content="SoroSoke helps you to confess your feelings or send a message to your friends, family, and loved ones anonymously for free." />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<script>
             var link = window.location.href;
